corrected thesis abstract to be non-repeatable

--- a/data_dictionary/www/Terms/templates/editor.html
+++ b/data_dictionary/www/Terms/templates/editor.html
@@ -25,13 +25,21 @@
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu" aria-labelledby="profile" id='profile'  data-toggle="button">
-            <li><button class="dropdown-item" type="button" id="profile" value='collection' data-toggle="button">Collection</a></li>
-            <li><button class="dropdown-item" type="button" id="profile" value='generic' data-toggle="button">Generic</a></li>
-            <li><button class="dropdown-item" type="button" id="profile" value='thesis' data-toggle="button">Thesis</a></li>
+            <li><button class="dropdown-item" type="button" id="profile" value='collection' data-toggle="button">Collection</li>
+            <li><button class="dropdown-item" type="button" id="profile" value='generic' data-toggle="button">Generic</li>
+            <li><button class="dropdown-item" type="button" id="profile" value='thesis' data-toggle="button">Thesis</li>
           </ul>
         </div>
 
-         <span id="result">?</span>
+        <div class="dropdown">
+          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+            Properties
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="properties" id='properties' data-toggle="button">
+            
+            
+          </ul>
 
         <div class="dropdown">
           <ul class="dropdown-menu" role="menu" aria-labelledby="properties">
