--- a/data_dictionary/www/Terms/templates/editor.html
+++ b/data_dictionary/www/Terms/templates/editor.html
@@ -16,9 +16,6 @@
   <body class = "body">
     <div class="container-fluid">
       <h3 class="text-center">Jupiter Application Profile Editor</h3>
-      
-      <form>
-        
         <div class="dropdown">
           <button class="btn btn-default dropdown-toggle" name='profiles' type="button" data-toggle="dropdown">
             Select Profile
@@ -34,16 +31,14 @@
         <div class="dropdown">
           <button class="btn btn-default dropdown-toggle"  name="properties" type="button" data-toggle="dropdown">
             Properties
-
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" id='properties' role="menu" aria-labelledby="properties" name='properties' data-toggle="button"></ul>
         </div>
-        
+        <button type="button" name='update' class="btn btn-success">Update Profiles</button>
         <div class="list-group">
         <ul class="list-group" aria-labelledby="annotations" name='annotations'></ul>
         </div>
 
-      </form>
   </body>
 </html>
