fixed capitalization issues

--- a/data_dictionary/www/Terms/templates/editor.html
+++ b/data_dictionary/www/Terms/templates/editor.html
@@ -19,7 +19,8 @@
         <div class="dropdown">
           <button class="btn btn-default dropdown-toggle" name='profiles' type="button" data-toggle="dropdown">
             Select Profile
-            <span class="caret"></span></button>
+            <span class="caret"></span>
+          </button>
           <ul class="dropdown-menu" role="menu" aria-labelledby="profile" name='profiles'  data-toggle="button">
             <li><button class="dropdown-item" type="button" name="profile" value='collection' data-toggle="button">Collection</li></button>
             <li><button class="dropdown-item" type="button" name="profile" value='generic' data-toggle="button">Generic</li></button>
@@ -35,10 +36,10 @@
           </button>
           <ul class="dropdown-menu" id='properties' role="menu" aria-labelledby="properties" name='properties' data-toggle="button"></ul>
         </div>
-        <button type="button" name='update' class="btn btn-success">Update Profiles</button>
-        <div class="list-group">
-        <ul class="list-group" aria-labelledby="annotations" name='annotations'></ul>
-        </div>
 
+        <div class="list-group">
+          <ul class="list-group" aria-labelledby="annotations" name='annotations'></ul>
+        </div>
+    </div>
   </body>
 </html>
