added audit feature and some documentation

--- a/data_dictionary/www/Terms/static/style.css
+++ b/data_dictionary/www/Terms/static/style.css
@@ -1,7 +1,20 @@
-.col { margin: 10px;
-	}
+.col { 	margin: 10px;
+}
+
 .input-group {	border: solid;
 				border-width: 1px;
 				border-color: silver;
 }
+
+li.row { width: 60%;
+		margin: auto;
+		padding: 1em;
+		border: solid;
+		border-width: 1px;
+		border-color: silver;
+
+}
+
+div.col {margin: auto}
+
 button { margin: 10px; }
