--- a/data_dictionary/www/Terms/templates/index.html
+++ b/data_dictionary/www/Terms/templates/index.html
@@ -3,52 +3,64 @@
   <head>
     <meta name="viewport" content = "width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jquery-3.2.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='tether.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script type="text/javascript">
       var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
     </script>
-    <script type ="text/javascript" src ="{{ url_for('static', filename='script.js') }}" ></script>
   </head>
-  {% block body %}
+  
   <body class = "body">
-    <div class="container-fluid">
-      <h3 class="text-center">Jupiter Application Profile Editor</h3>
-      {% from "_formhelpers.html" import render_field %}
-      <form method=post action="/_setProfile">
-        <dl>
-          {{ render_field(form.newProperty) }}
-          {{ render_field(form.implemented) }}
-        </dl>
-
+    <div class="container-fluid" >
+      <h1 class="text-center">Jupiter Application Profile Editor</h1>
+        <div class="navbar-header">          
         <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select Profile
-          <span class="caret"></span></button>
-          <ul class="dropdown-menu" role="menu" aria-labelledby="profile">
-            <button class="dropdown-item" type="button" id="profile" value='collection'>Collection</button>
-            <button class="dropdown-item" type="button" id="profile" value='generic'>Generic</button>
-            <button class="dropdown-item" type="button" id="profile" value='thesis'>Thesis</button>
+          <button class="btn btn-default dropdown-toggle" name='users' type="button" data-toggle="dropdown">
+            Select User
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="user" name='users'  data-toggle="button">
+            <li><button class="dropdown-item" type="button" name="user" value='danoosh' data-toggle="button">Danoosh</li></button>
+            <li><button class="dropdown-item" type="button" name="user" value='john' data-toggle="button">John</li></button>
+            <li><button class="dropdown-item" type="button" name="user" value='mariana' data-toggle="button">Mariana</li></button>
+            <li><button class="dropdown-item" type="button" name="user" value='sharon' data-toggle="button">Sharon</li></button>
+            <li><button class="dropdown-item" type="button" name="user" value='zach' data-toggle="button">Zach</li></button>
           </ul>
         </div>
-
-        <p id="result"></p>
-
+        <!-- below, select a application profile you want to view/edit properties (this also selects the graph that will be edited in the triplestore) -->
         <div class="dropdown">
-          <ul class="dropdown-menu" role="menu" aria-labelledby="properties">
-            <!-- dynamic fill with properties-->
+          <button class="btn btn-default dropdown-toggle" name='profiles' type="button" data-toggle="dropdown">
+            Select Profile
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="profile" name='profiles'  data-toggle="button">
+            <li><button class="dropdown-item" type="button" name="profile" value='collection' data-toggle="button">Collection</li></button>
+            <li><button class="dropdown-item" type="button" name="profile" value='generic' data-toggle="button">Generic</li></button>
+            <li><button class="dropdown-item" type="button" name="profile" value='instances' data-toggle="button">Instances (contrl. vocabs)</li></button>
+            <li><button class="dropdown-item" type="button" name="profile" value='thesis' data-toggle="button">Thesis</li></button>
           </ul>
         </div>
-
-        <p><input type=submit value=Register></p>
-      </form>
-    
-    {% if error %}
-      <p class="error"><strong>Error:</strong>{{error}}</p>
-    {% endif %}
+        <!-- below, select a property (a predicate or controlled vocabularly term) that you want to edit-->
+        <div class="dropdown">
+          <button class="btn btn-default dropdown-toggle"  name="properties" type="button" data-toggle="dropdown">
+            Select a Property
+            <span class="caret"></span>
+          </button>
+          <div class='row' name="subtitle"></div>
+          <ul class="dropdown-menu" id='properties' role="menu" aria-labelledby="properties" name='properties' data-toggle="button"></ul>
+        </div>
+      </div>
+      <!-- below, a list of annotations (settings, or features) will be populated for viewing/editing-->
+        <div class="list-group">
+          <ul class="list-group" aria-labelledby="annotations" name='annotations'></ul>
+          <!-- you may also create am entirely new annotation -->
+          <ul class="list-group" aria-labelledby="newAnnotation" name='newAnnotation'><form name="newAnnotation"></form></ul>
+        </div>
+       <a href='audit' class='col'>View the audit trail</a>       
     </div>
-
   </body>
-  {% endblock %}
+  <script type ="text/javascript" src ="{{ url_for('static', filename='script.js') }}" ></script>
 </html>
