preparing for community profile

--- a/data_dictionary/www/Terms/templates/index.html
+++ b/data_dictionary/www/Terms/templates/index.html
@@ -38,6 +38,7 @@
           </button>
           <ul class="dropdown-menu" role="menu" aria-labelledby="profile" name='profiles'  data-toggle="button">
             <li><button class="dropdown-item" type="button" name="profile" value='collection' data-toggle="button">Collection</li></button>
+            <li><button class="dropdown-item" type="button" name="profile" value='community' data-toggle="button">Community</li></button>
             <li><button class="dropdown-item" type="button" name="profile" value='generic' data-toggle="button">Generic</li></button>
             <li><button class="dropdown-item" type="button" name="profile" value='instances' data-toggle="button">Instances (contrl. vocabs)</li></button>
             <li><button class="dropdown-item" type="button" name="profile" value='thesis' data-toggle="button">Thesis</li></button>
