added etdms and pmh (oai) profiles and profile handler

--- a/data_dictionary/www/Terms/templates/index.html
+++ b/data_dictionary/www/Terms/templates/index.html
@@ -42,6 +42,8 @@
             <li><button class="dropdown-item" type="button" name="profile" value='generic' data-toggle="button">Generic</li></button>
             <li><button class="dropdown-item" type="button" name="profile" value='instances' data-toggle="button">Instances (contrl. vocabs)</li></button>
             <li><button class="dropdown-item" type="button" name="profile" value='thesis' data-toggle="button">Thesis</li></button>
+            <li><button class="dropdown-item" type="button" name="profile" value='oai_pmh' data-toggle="button">OAI-PMH</li></button>
+            <li><button class="dropdown-item" type="button" name="profile" value='oai_etdms' data-toggle="button">OAI-ETDMS</li></button>
           </ul>
         </div>
         <!-- below, select a property (a predicate or controlled vocabularly term) that you want to edit-->
