adding file format validation and processing

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/deleted.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/deleted.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 <div class="container">
-  <div class="alert alert-success alert-dismissible">
+ <div class="alert alert-success alert-dismissible">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    <strong>Success!</strong> The file was deleted
+    <strong>Success!</strong> The file was deleted.
   </div>
   <p><a href="{% url 'index' %}">Return to home</a></p>
 </div>
