--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
@@ -3,13 +3,32 @@
 {% block content %}
   <button class="btn btn-primary" name='users' type="button">START</button>
   <div class="file-format">
-      <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Upload</button>
-      </form>
+      <label class="container">NARC (.mrc)
+        <input class="marc" type="radio" name="file_format">
+        <span class="checkmark"></span>
+      </label>
+      <label class="container">BIBFRAME (.xml)
+        <input class="bib" type="radio" name="file_format">
+        <span class="checkmark"></span>
+      </label>
+      <div class="bib_form">
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+            <h4>BIBFRAME files upload</h4>
+            {{ bib_form.as_p }}
+          <button class="btn btn-default btn-danger" type="submit">Upload BIBFRAME</button>
+        </form>
+      </div>
+      <div class="marc_form">
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+            <h4>MARC files upload</h4>
+            {{ marc_form.as_p }}
+          <button class="btn btn-default btn-danger" type="submit">Upload Marc</button>
+        </form>
+      </div>
 
-      {% if documents %}
+      {% if marc_documents %}
         <br><br>
         <p>Uploaded files:</p>
         <table class="table table-hover" class="table table-bordered" style="width:100%">
@@ -19,9 +38,9 @@
             <th>Uploaded at</th>
             <th></th>
           </tr>
-          {% for obj in documents %}
+          {% for obj in marc_documents %}
             <tr>
-              <td><input type="checkbox" name="vehicle" value="{{ obj.document.name }}"></td>
+              <td><input type="checkbox" name="file_select" value="{{ obj.document.name }}"></td>
               <td><a href="{{ obj.document.url }}">{{ obj.document.name }}</a></td>
               <td><small>{{ obj.uploaded_at }}</small></td>
               <td><form action="{% url 'record-d' id=obj.id  %}" method="POST">
