--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/model_form_upload.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/model_form_upload.html
@@ -1,11 +1,9 @@
 {% extends 'webapp/base.html' %}
 
 {% block content %}
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Upload</button>
-  </form>
-
+  {% for doc in documents %}
+  	<p>Your file {{doc.name}} was uploaded</p>
+  {% endfor %}
   <p><a href="{% url 'index' %}">Return to home</a></p>
+  }
 {% endblock %}
