adding overall status updates for single file processing

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/processing.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/processing.html
@@ -27,7 +27,10 @@
                   {% csrf_token %}
                   <input class="btn btn-default btn-danger" type="submit" value="Stop Process" onclick="return confirm('Are you sure you want to stop processing {{ obj.name }}?')"/>
                 </form></td>
-            	<td><button class="btn btn-default btn-danger" type="submit" name="view_progress">View progress</button></td>
+            	<td><button class="btn btn-default btn-danger" type="submit" name="view_progress">Progress Details</button></td>
+            </tr>
+            <tr>
+            	<td class="overall_progress" colspan="8" align="center"></td>
             </tr>
             {% include 'webapp/includes/progress.html' %}			
           {% endfor %}
