--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
@@ -4,7 +4,7 @@
 				<td class="progress_stage_head" colspan="8" align="center"><h3>Currently at Stage</h3></td>
 			</tr>
     		<tr>
-    			<td class="progress_stage" colspan="7" align="center"></td>
+    			<td class="progress_stage" colspan="8" align="center"></td>
     		</tr>
 			<tr class="progress_head">
     			<th>Process ID</th>
@@ -12,10 +12,12 @@
 				<th>Titles extracted</th>
 				<th>Personal names</th>
 				<th>Corporate names</th>
+				<th>MARC to BIBFRAME conversion Progress</th>
 				<th>Name Enrichment Progress</th>
 				<th>Title Enrichment Progress</th>
     		</tr>
     		<tr class="progress_row">
+				<td>N/A</td>
 				<td>N/A</td>
 				<td>N/A</td>
 				<td>N/A</td>
